# EasyProject-MCP-Server

./: .gitignore  CLAUDE-PROMPTS.md  Cargo.toml  README.md  TEAM-CONVENTIONS.md  TODO.md
src/api/: client.rs  models.rs
src/tools/: attachment_tools.rs  issue_tools.rs  mod.rs  registry.rs  report_tools.rs  user_tools.rs
