[package]
name = "easyproject-mcp-server"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol server for EasyProject API integration"
authors = ["EasyProject MCP Team"]
license = "MIT"

[dependencies]
# MCP and JSON-RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }

# Binary attachment encoding
base64 = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Rate limiting
governor = "0.6"

# Caching
moka = { version = "0.12", features = ["future"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.4"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }
regex = "1.11.1"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"

# Release optimization pro single-file deployment
[profile.release]
opt-level = "z"          # Optimalizace pro velikost
lto = true               # Link Time Optimization
codegen-units = 1        # Lepší optimalizace
panic = "abort"          # Menší binárka
strip = "symbols"        # Odstranění debug symbolů

# Target-specific konfigurace pro Windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi"] } 
